<resources>
    <string name="app_name">Zodiac Match</string>
    <string name="action_settings">Settings</string>

    <!-- facebook id -->
    <string name="facebook_app_id">985634928210766</string>

    <string name="welcome">ZMatch</string>
    <string name="fb_login_protocol_scheme">fb985634928210766</string>

    <!-- zodiac names -->
    <string name="aries_name">Aries</string>
    <string name="taurus_name">Taurus</string>
    <string name="gemini_name">Gemini</string>
    <string name="cancer_name">Cancer</string>
    <string name="leo_name">Leo</string>
    <string name="virgo_name">Virgo</string>
    <string name="libra_name">Libra</string>
    <string name="scorpio_name">Scorpio</string>
    <string name="sagittarius_name">Sagittarius</string>
    <string name="capricorn_name">Capricorn</string>
    <string name="aquarius_name">Aquarius</string>
    <string name="pices_name">Pices</string>

    <!-- profile strings -->
    <string name="bio">Bio</string>
    <string name="signs">Signs</string>
    <string name="bio_btn">Update Bio</string>
    <string name="signs_btn">Update Signs</string>
    <string name="save_btn">Save</string>
    <string name="done_btn">Done</string>
    <string name="sign_dialog_title">Select The Signs you want to see</string>


</resources>
